<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleDialog"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/llFields">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:paddingTop="20dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:hint="@string/nameLabel"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/llFields"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/btnOK"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/btnCancel"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>