<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.AnalyticsFragment"
    android:background="@color/colorBackground">

    <android.support.v7.widget.CardView
        android:id="@+id/cvAnalytics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleTodayTimeActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:textSize="6pt"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/tvTitleTodayTimeActivity"/>

            <TextView
                android:id="@+id/tvAllTimeActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:textSize="16pt"
                android:textColor="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="right"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTodayTimeActivity"
                android:text="8"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/llTodayTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAnalytics">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitleTodayWorkActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:textSize="6pt"
                    android:textColor="@color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/tvTitleTodayWorkActivity"/>

                <TextView
                    android:id="@+id/tvTodayWorkTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:textSize="16pt"
                    android:textColor="@color/black"
                    app:layout_constraintRight_toRightOf="parent"
                    android:gravity="right"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleTodayWorkActivity"
                    android:text="8"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitleTodayTimeLazy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="15dp"
                    android:textSize="6pt"
                    android:textColor="@color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/tvTitleTodayTimeLazy"/>

                <TextView
                    android:id="@+id/tvLazyTimeToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:textSize="16pt"
                    android:textColor="@color/black"
                    app:layout_constraintRight_toRightOf="parent"
                    android:gravity="right"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleTodayTimeLazy"
                    android:text="8"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>